--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,10 @@
 :root {
-  --primaryColor: #333333;
+  --primaryColor: #050005;
   --secondaryColor: #CCCCCC;
 }
 
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Times New Roman', Times, serif;
 }
