--- a/frontend/src/layout/homepage/style.css
+++ b/frontend/src/layout/homepage/style.css
@@ -4,7 +4,7 @@
 
   display: flex;
 
-  background-color: #050005;
+  background-color: var(--primaryColor);
   color: var(--secondaryColor);
 
   overflow: hidden;
@@ -27,16 +27,31 @@
 
 .games-container {
   margin-top: 5vh;
+  display: flex;
+  flex-direction: row;
 }
 
 .games-container button {
-  font-size: 1rem;
+  font-size: 1.2rem;
   color: var(--secondaryColor);
-  background-color: #050005;
+  background-color: var(--primaryColor);
 
   padding: 1.2rem;
   margin: 2rem;
 
-  border: 1px solid var(--secondaryColor);
+  border: 2px solid var(--secondaryColor);
   border-radius: 10px;
+
+  transition: background-color 0.5s, color 0.5s ;
+}
+
+.games-container button:hover {
+  background-color: var(--secondaryColor);
+  color: var(--primaryColor);
+}
+
+@media (max-width:780px) {
+  .games-container {
+    flex-direction: column;
+  }
 }
