--- a/frontend/src/layout/chess/style.css
+++ b/frontend/src/layout/chess/style.css
@@ -94,6 +94,12 @@
   align-items: center;
 }
 
+.loading-user {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 button {
   font-size: 1.5rem;
   padding: 1.2rem;
