--- a/frontend/src/layout/chess/gamestyle.css
+++ b/frontend/src/layout/chess/gamestyle.css
@@ -5,7 +5,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
 }
 
@@ -17,6 +17,7 @@
   align-items: center;
   justify-content: space-between;
   width: 50%;
+  margin: 5%;
 }
 
 .clock, .runningClock{
