--- a/frontend/src/components/chess/ShowcaseGame.style.css
+++ b/frontend/src/components/chess/ShowcaseGame.style.css
@@ -5,8 +5,16 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   align-items: center;
+}
+
+.Showcase section {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  height: 10vh;
 }
 
 .green-name {
@@ -21,4 +29,10 @@
   text-align: center;
   font-size: 1.8rem;
   width: 25%;
+}
+
+@media (max-width: 780px) {
+  .Showcase section {
+    width: 100%;
+  }
 }
