--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,3 +8,8 @@
   padding: 0;
   font-family: 'Times New Roman', Times, serif;
 }
+
+:root {
+  background-color: var(--primaryColor);
+  color: var(--secondaryColor);
+}
