--- a/frontend/src/layout/chess/gamestyle.css
+++ b/frontend/src/layout/chess/gamestyle.css
@@ -17,7 +17,7 @@
   align-items: center;
   justify-content: space-between;
   width: 50%;
-  margin: 5%;
+  height: 15vh;
 }
 
 .clock, .runningClock{
