--- a/frontend/src/layout/chess/style.css
+++ b/frontend/src/layout/chess/style.css
@@ -2,8 +2,8 @@
   background-color: var(--primaryColor);
   color: var(--secondaryColor);
 
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 
   display: flex;
   flex-direction: column;
@@ -18,13 +18,18 @@
   background-color: var(--primaryColor);
   color: var(--secondaryColor);
 
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .chess header{
   height: 15vh;
   font-size: 2rem;
+  width: 100%;
 
   display: flex;
   flex-direction: row;
@@ -39,21 +44,21 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-
-  height: 85vh;
+  align-items: center;
+  width: 100%;
 }
 
 .stats {
-  width: 40%;
-}
+  width: 40vw;
+  height: 50vh;
+  overflow-y: scroll;
 
-.stats ul {
-  height: 90%;
-  margin: 1.2rem;
-  padding: 10px;
   color: var(--primaryColor);
   background-color: var(--secondaryColor);
   border-radius: 10px;
+}
+
+.stats ul {
   text-align: center;
 }
 
@@ -128,7 +133,7 @@ button:hover {
   }
 
   .stats {
-    width: 100%;
+    width: 80vw;
     margin-bottom: 10%;
   }
 
